--- a/compose.yml
+++ b/compose.yml
@@ -2,10 +2,12 @@ services:
   backend:
     build: .
     ports:
-      - "8000:8000"
+      - "${APP_PORT:-8000}:8000"
     volumes:
       - .:/app
     restart: always
+    environment:
+      - TZ=America/Bogota
     logging:
       driver: "json-file"
       options:
@@ -14,16 +16,24 @@ services:
   mysql:
     image: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: backend_laravel_api
-      MYSQL_USER: sail
-      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-password}
+      MYSQL_DATABASE: ${DB_DATABASE:-laravel}
+      MYSQL_USER: ${DB_USERNAME:-root}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-password}
     ports:
-      - "3309:3306"
+      - "${FORWARD_DB_PORT:-3306}"
     restart: always
     logging:
       driver: "json-file"
       options:
         max-size: "200k"
         max-file: "10"
+
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+      - ${FORWARD_PMA_PORT:-8080}:80
+    environment:
+      - PMA_ARBITRARY=1
 
