--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,29 +1,44 @@
 [supervisord]
+user=root
 nodaemon=true
-loglevel=debug
+logfile=/dev/stdout
+logfile_maxbytes=0
+pidfile=/var/run/supervisord.pid
 
 [program:web]
-command=php artisan octane:frankenphp --max-requests=1000000 --workers=16 --port=8000 --admin-port=2020 --watch
+command=php /app/artisan octane:frankenphp --host=127.0.0.1 --port=8000 --workers=8 --max-requests=10000
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/web-stdout.log
-stderr_logfile=/var/log/web-stderr.log
-user=root
+priority=2
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 [program:queue]
-command=php artisan queue:work --queue=default,high,low --sleep=3 --tries=3
+command=php /app/artisan queue:work --queue=default,high,low --sleep=3 --tries=3
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/queue-stdout.log
-stderr_logfile=/var/log/queue-stderr.log
-user=root
+priority=3
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 
 
 
 [program:scheduler]
-command=php artisan schedule:run
+command=php /app/artisan schedule:run
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/scheduler-stdout.log
-stderr_logfile=/var/log/scheduler-stderr.log
-user=root
+priority=3
+stdout_events_enabled=true
+stderr_events_enabled=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
