--- a/compose-prod.yml
+++ b/compose-prod.yml
@@ -1,3 +1,6 @@
+volumes:
+  db-data:
+  phpmyadmin-data:
 services:
   backend:
     build: .
@@ -23,6 +26,8 @@ services:
     ports:
       - "${FORWARD_DB_PORT:-3306}"
     restart: always
+    volumes:
+      - db-data:/var/lib/mysql
     logging:
       driver: "json-file"
       options:
